examples/errors/empty_swimlane.eventmodel
Title: Empty Swimlane Test

Swimlane: EmptyService

Swimlane: NonEmptyService
- Event: SomethingHappened